-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
15733
This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/048f4df6-3b7a-11e4-a52e-5254006e85c2.
The sub-test test_14 failed with the following error:
(7) ls should succeed
Please provide additional information about the failure here.
Info required for matching: sanity-scrub 14