LU-5623 osd-ldiskfs: fix typo in lost+found repair item

Fix a typo in lr_repaired (was lr_reparied) and fix the test script
that checks it to allow both spellings for interop testing with
older servers.

Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Change-Id: If1c4c6246143f874a0d2de6434f5c89c67469053
Reviewed-on: http://review.whamcloud.com/16025
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>